# revolt_v2

./: README.md
andino_base/: CHANGELOG.rst  package.xml
andino_base/src/: diffdrive_andino.cpp
andino_bringup/: CMakeLists.txt
andino_bringup/config/: raspicam.yaml
andino_bringup/launch/: camera.launch.py  revolt_robot.launch.py  rosbag_record.launch.py  rviz.launch.py  teleop_joystick.launch.py
andino_firmware/: CHANGELOG.rst  README.md  package.xml  platformio.ini
andino_firmware/src/: app.cpp  app.h  commands.h  hw.h
revolt_bringup/: package.xml
revolt_bringup/launch/: revolt_robot.launch.py  rplidar.launch.py
revolt_control/: CMakeLists.txt  package.xml
revolt_control/config/: revolt_controllers.yaml
revolt_control/launch/: revolt_control.launch.py
revolt_description/: CMakeLists.txt  package.xml
revolt_description/launch/: revolt_description.launch.py  view_revolt.launch.py
revolt_description/meshes/: 3_mm_screw.stl  body.scad  body.stl  bolt.dae  bolt.stl  camera_deck.scad  camera_deck.stl  camera_holder_cover.dae  camera_holder_cover.stl  camera_mount.dae  camera_mount_upper.dae  camera_mount_upper.stl  caster_base_plate.stl  caster_punch_bracket.stl  caster_wheel.dae  caster_wheel.stl  face.dae  face.stl  left_wheel.dae  lens.dae  lens.stl  mouth.dae  (+7 more)
revolt_gz_classic/: CMakeLists.txt  package.xml
revolt_gz_classic/config/: joystick.yaml
revolt_gz_classic/launch/: joystick.launch.py  revolt_sim_robot.launch.py  spawn_robot.launch.py
revolt_gz_classic/urdf/: revolt_gz_classic.xacro
revolt_gz_classic/world/: empty.world
(+11 files in other folders)
